@@ -24,35 +24,36 @@ import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.filter.server.entity.FilterAdjustmentType;
 import com.echothree.model.data.filter.server.factory.FilterAdjustmentTypeFactory;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import javax.enterprise.context.RequestScoped;
+import javax.inject.Inject;
 
+@RequestScoped
 public class GetFilterAdjustmentTypesCommand
-        extends BaseMultipleEntitiesCommand<FilterAdjustmentType, GetFilterAdjustmentTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<FilterAdjustmentType, GetFilterAdjustmentTypesForm> {
+
+    @Inject
+    FilterControl filterControl;
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.FilterAdjustmentType.name(), SecurityRoles.List.name())
-                )))
-        )));
-
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                ))
         ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetFilterAdjustmentTypesCommand */
@@ -61,9 +62,17 @@ public class GetFilterAdjustmentTypesCommand
     }
 
     @Override
-    protected Collection<FilterAdjustmentType> getEntities() {
-        var filterControl = Session.getModelController(FilterControl.class);
+    protected void handleForm() {
+        // No fields to handle for this command.
+    }
 
+    @Override
+    protected Long getTotalEntities() {
+        return filterControl.countFilterAdjustmentTypes();
+    }
+
+    @Override
+    protected Collection<FilterAdjustmentType> getEntities() {
         return filterControl.getFilterAdjustmentTypes();
     }
 
@@ -72,10 +81,8 @@ public class GetFilterAdjustmentTypesCommand
         var result = FilterResultFactory.getGetFilterAdjustmentTypesResult();
 
         if(entities != null) {
-            var filterControl = Session.getModelController(FilterControl.class);
-
             if(session.hasLimit(FilterAdjustmentTypeFactory.class)) {
-                result.setFilterAdjustmentTypeCount(filterControl.countFilterAdjustmentTypes());
+                result.setFilterAdjustmentTypeCount(getTotalEntities());
             }
 
             result.setFilterAdjustmentTypes(filterControl.getFilterAdjustmentTypeTransfers(getUserVisit(), entities));
