@@ -25,80 +25,106 @@ import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.item.server.entity.ItemDescriptionType;
 import com.echothree.model.data.item.server.entity.ItemDescriptionTypeUse;
 import com.echothree.model.data.item.server.entity.ItemDescriptionTypeUseType;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.item.server.factory.ItemDescriptionTypeUseFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import javax.enterprise.context.RequestScoped;
+import javax.inject.Inject;
 
+@RequestScoped
 public class GetItemDescriptionTypeUsesCommand
-        extends BaseMultipleEntitiesCommand<ItemDescriptionTypeUse, GetItemDescriptionTypeUsesForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<ItemDescriptionTypeUse, GetItemDescriptionTypeUsesForm> {
+
+    @Inject
+    ItemControl itemControl;
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ItemDescriptionTypeUse.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ItemDescriptionTypeUseTypeName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("ItemDescriptionTypeName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetItemDescriptionTypeUsesCommand */
     public GetItemDescriptionTypeUsesCommand() {
-        super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
+        super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
     ItemDescriptionTypeUseType itemDescriptionTypeUseType;
     ItemDescriptionType itemDescriptionType;
 
     @Override
-    protected Collection<ItemDescriptionTypeUse> getEntities() {
-        var itemControl = Session.getModelController(ItemControl.class);
+    protected void handleForm() {
         var itemDescriptionTypeName = form.getItemDescriptionTypeName();
         var itemDescriptionTypeUseTypeName = form.getItemDescriptionTypeUseTypeName();
         var parameterCount = (itemDescriptionTypeName == null ? 0 : 1) + (itemDescriptionTypeUseTypeName == null ? 0 : 1);
-        Collection<ItemDescriptionTypeUse> itemDescriptionTypeUses = null;
 
         if(parameterCount == 1) {
             if(itemDescriptionTypeUseTypeName != null) {
                 itemDescriptionTypeUseType = itemControl.getItemDescriptionTypeUseTypeByName(itemDescriptionTypeUseTypeName);
 
-                if(itemDescriptionTypeUseType != null) {
-                    itemDescriptionTypeUses = itemControl.getItemDescriptionTypeUsesByItemDescriptionTypeUseType(itemDescriptionTypeUseType);
-                } else {
+                if(itemDescriptionTypeUseType == null) {
                     addExecutionError(ExecutionErrors.UnknownItemDescriptionTypeUseTypeName.name(), itemDescriptionTypeUseTypeName);
                 }
             } else {
                 itemDescriptionType = itemControl.getItemDescriptionTypeByName(itemDescriptionTypeName);
 
-                if(itemDescriptionType != null) {
-                    itemDescriptionTypeUses = itemControl.getItemDescriptionTypeUsesByItemDescriptionType(itemDescriptionType);
-                } else {
+                if(itemDescriptionType == null) {
                     addExecutionError(ExecutionErrors.UnknownItemDescriptionTypeName.name(), itemDescriptionTypeName);
                 }
             }
         } else {
             addExecutionError(ExecutionErrors.InvalidParameterCount.name());
         }
+    }
 
-        return itemDescriptionTypeUses;
+    @Override
+    protected Long getTotalEntities() {
+        Long totalEntities = null;
+
+        if(!hasExecutionErrors()) {
+            if(itemDescriptionTypeUseType != null) {
+                totalEntities = itemControl.countItemDescriptionTypeUsesByItemDescriptionTypeUseType(itemDescriptionTypeUseType);
+            } else {
+                totalEntities = itemControl.countItemDescriptionTypeUsesByItemDescriptionType(itemDescriptionType);
+            }
+        }
+
+        return totalEntities;
+    }
+
+    @Override
+    protected Collection<ItemDescriptionTypeUse> getEntities() {
+        Collection<ItemDescriptionTypeUse> entities = null;
+
+        if(!hasExecutionErrors()) {
+            if(itemDescriptionTypeUseType != null) {
+                entities = itemControl.getItemDescriptionTypeUsesByItemDescriptionTypeUseType(itemDescriptionTypeUseType);
+            } else {
+                entities = itemControl.getItemDescriptionTypeUsesByItemDescriptionType(itemDescriptionType);
+            }
+        }
+
+        return entities;
     }
 
     @Override
@@ -109,9 +135,15 @@ public class GetItemDescriptionTypeUsesCommand
             var itemControl = Session.getModelController(ItemControl.class);
             var userVisit = getUserVisit();
 
+            if(session.hasLimit(ItemDescriptionTypeUseFactory.class)) {
+                result.setItemDescriptionTypeUseCount(getTotalEntities());
+            }
+
             if(itemDescriptionTypeUseType != null) {
                 result.setItemDescriptionTypeUseType(itemControl.getItemDescriptionTypeUseTypeTransfer(userVisit, itemDescriptionTypeUseType));
-            } else if(itemDescriptionType != null) {
+            }
+            
+            if(itemDescriptionType != null) {
                 result.setItemDescriptionType(itemControl.getItemDescriptionTypeTransfer(userVisit, itemDescriptionType));
             }
 
